<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_settings_header">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/draw_wave_chart_key"
            android:summary="@string/draw_wave_chart"
            android:title="@string/draw_wave_chart" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/draw_spec_chart_key"
            android:summary="@string/draw_spec_chart"
            android:title="@string/draw_spec_chart" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/apply_filter_key"
            android:summary="@string/apply_filter"
            android:title="@string/apply_filter" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/apply_convolution_key"
            android:summary="@string/apply_convolution"
            android:title="@string/apply_convolution" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/apply_envelope_key"
            android:summary="@string/apply_envelope"
            android:title="@string/apply_envelope" />
        <DropDownPreference
            android:defaultValue="false"
            android:key="@string/wave_type_key"
            android:summary="@string/wave_type"
            android:title="@string/wave_type"
            android:entries="@array/wave_types"
            android:entryValues="@array/wave_types_values"/>
        <EditTextPreference
            android:key="@string/test_freq_key"
            android:title="@string/test_freq"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:useSimpleSummaryProvider="true" />
<!--

        <ListPreference
            android:key="@string/loop_key"
            android:title="@string/loop"
            android:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/file_header">

        <SwitchPreferenceCompat
            android:key="@string/file_key"
            android:title="@string/file" />

    </PreferenceCategory>

</PreferenceScreen>
